--- a/src/app/components/workspace/workspace.component.html
+++ b/src/app/components/workspace/workspace.component.html
@@ -4,13 +4,13 @@
         <mat-icon class="material-icons">flash_on</mat-icon>
         <span class="item">Grid</span>
         <span class="spacer"></span>
-  
+
         <!-- <mat-select class="item" [(value)]="selectedCase" (selectionChange)="onDatasetChanged($event.value)">
             <mat-option *ngFor="let opt of datasetOptions" [value]="opt.value">
               {{opt.viewValue}}
             </mat-option>
         </mat-select> -->
-  
+
       </mat-toolbar>
     </div>
     <div class="left">
@@ -18,13 +18,15 @@
       <!-- <app-bar2-chart></app-bar2-chart> -->
       <!-- <app-bar3-chart></app-bar3-chart> -->
       <!-- <app-line-chart></app-line-chart> -->
-      <app-line2-chart></app-line2-chart>
+      <!-- <app-line2-chart></app-line2-chart> -->
       <!-- <app-line3-chart></app-line3-chart> -->
+      <app-treemap></app-treemap>
+      <!-- <app-zoomable-treemap></app-zoomable-treemap> -->
+      <!-- <app-brush-zoom></app-brush-zoom> -->
     </div>
     <div class="right">
-      
+
     </div>
 
-  
+
 </div>
-  
